Fix spacing in Selectors

--- a/webapp/src/assets/styles/_dashboards.scss
+++ b/webapp/src/assets/styles/_dashboards.scss
@@ -81,7 +81,7 @@ $total-columns: 7;
 		margin-bottom: 2rem;
 	}
 	.dropdown-list:not(.button) {
-		padding: 0 10px 10px 10px;
+		padding: 0 0 10px 0;
 	}
   footer.hideable {
     position: fixed;
